services Dashboard Mobile 23rd feb 2018

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -20,7 +20,7 @@
       <h4> My Visit</h4>
       <span class="daysLeft">
         <i class="fa fa-star" aria-hidden="true"></i>
-        2 DAYS LEFT  {{Visits | json}}
+        2 Days Left
       </span>
     </div>
     <ion-list class="list listMyVisit"  style="  background: url(assets/imgs/Panel_BG.png);background-size: cover;">
