--- a/src/pages/rootModule/rootModule.html
+++ b/src/pages/rootModule/rootModule.html
@@ -1,7 +1,8 @@
 <ion-list class="popOverDisplay">
-      <ion-list class="manager-name">John Smith</ion-list>
-      <ion-list class="list"><i class="far fa-user user-icon"></i>Profile</ion-list>
-      <ion-list><i class="far fa-question-circle help-icon"></i>Change Password</ion-list>
-      <ion-list><i class="far fa-question-circle help-icon"></i>Help</ion-list>
-      <ion-list (click)="goBack()"><i class="fas fa-power-off log-out"></i>Log Out</ion-list>
+      <ion-list class="managerName">{{ attendeeName }}</ion-list>
+      <ion-list class="list"><i class="fa fa-user icon"></i>Profile</ion-list>
+      <ion-list><i class="fa fa-question-circle-o icon"></i>Change Password</ion-list>
+      <ion-list><i class="fa fa-lock icon" ></i>Help</ion-list>
+      
+      <ion-list (click)="goBack()"><i class="fa fa-power-off log-out"></i>Log Out</ion-list>
 </ion-list>
