--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,18 +1,18 @@
-<ion-header class="header">
-  <ion-navbar>
-    <ion-title class="logoTitle" (click) = "futureVisitData()">
-      <img class="mainLogo" src="assets/imgs/logo1.png">
-    </ion-title>
-    <div class=profile>
-      <i class="fa fa-bell-o notifiation" aria-hidden="true"></i>
-      <span class="badge count">02</span>
-      <ion-avatar class="userDetails" item-start>
-        <img class="avatar" src="assets/imgs/Profile_M_AgendaScreen.png">
-      </ion-avatar>
-      <i class="fa fa-chevron-down fa-lg popOver" aria-hidden="true" (click)="presentPopover($event)"></i>
-    </div>
-  </ion-navbar>
-</ion-header>
+ 
+     <!-- <ion-header class="header">
+        <ion-navbar>
+          <ion-title class="logoTitle" (click) = "futureVisitData()">
+            <img class="mainLogo" src="assets/imgs/logo1.png">
+          </ion-title>
+          <div class=profile>
+            <i class="fa fa-bell-o notifiation " (click)="notificationPopover()" aria-hidden="true"></i>
+            <span class="badge count">02</span>
+            <ion-avatar class="userDetails" (click)="presentPopover($event)" item-start>
+              <img class="avatar" src="assets/imgs/Profile_M_AgendaScreen.png">
+            </ion-avatar>
+          </div>
+        </ion-navbar>
+      </ion-header>  -->
 
 <ion-content class="container">
   <div class="visits">
