Design Updates- mobile view

--- a/src/pages/my-visit/my-visit.html
+++ b/src/pages/my-visit/my-visit.html
@@ -54,8 +54,8 @@
                           
                               <ion-item class="ionItem start">
                                 <div class="profilesPresenters">
-                                    <img class="presenterOne" src="assets/imgs/profile1.png">
-                                    <img class="presenterTwo" src="assets/imgs/profile2.png">
+                                    <img class="presenterOne" src="assets/imgs/profilepic_male.png">
+                                    <img class="presenterTwo" src="assets/imgs/profilepic_male.png">
                                 </div>
                                 <p class="timing"> {{ agendaDetails.from}} - {{ agendaDetails.to}}</p>
                                 <p class="titleTopic">{{ agendaDetails.topic}} </p>
@@ -75,7 +75,7 @@
             </div>
     </div>
  
-<div [class.hide]="checkStatus" > Itenary</div>
+<div [class.hide]="checkStatus" > Itineary Future Scope</div>
   </div>
   </div>
 </ion-content>
