--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,26 +1,11 @@
- 
-     <!-- <ion-header class="header">
-        <ion-navbar>
-          <ion-title class="logoTitle" (click) = "futureVisitData()">
-            <img class="mainLogo" src="assets/imgs/logo1.png">
-          </ion-title>
-          <div class=profile>
-            <i class="fa fa-bell-o notifiation " (click)="notificationPopover()" aria-hidden="true"></i>
-            <span class="badge count">02</span>
-            <ion-avatar class="userDetails" (click)="presentPopover($event)" item-start>
-              <img class="avatar" src="assets/imgs/Profile_M_AgendaScreen.png">
-            </ion-avatar>
-          </div>
-        </ion-navbar>
-      </ion-header>  -->
-
+<ion-nav id="nav"  [root]="pageNavigation"></ion-nav>
 <ion-content class="container">
   <div class="visits">
     <div class="myVisitHeader">
       <h4> My Visit</h4>
       <span class="daysLeft">
         <i class="fa fa-star" aria-hidden="true"  *ngIf="daysRemaining"></i>
-        {{ daysRemaining }}
+         &nbsp;{{ daysRemaining }}
       </span>
     </div>
     <ion-list class="list listMyVisit"  style="  background: url(assets/imgs/Panel_BG.png);background-size: cover;">
@@ -38,7 +23,7 @@
                   <div>
                     <p>
                       <i class="fa fa-calendar fa-lg icon-color calendar"></i>
-                      <span class="daysCount"> {{ firstVisit.startDate | date : "d" }}<sup>{{firstVisit.startSuperScript}}</sup>{{firstVisit.startDate | date : "MMM"}} - {{ firstVisit.endDate | date : "d" }}<sup>{{ firstVisit.endSuperScript }}</sup> {{ firstVisit.endDate | date : "MMM"}} </span> | {{firstVisit.noOfDays}} Day(s)</p>
+                      <span class="daysCount"> {{ firstVisit.startDate | date : "d" }}<sup>{{firstVisit.startSuperScript}} </sup>{{firstVisit.startDate | date : "MMM"}} - {{ firstVisit.endDate | date : "d" }}<sup>{{ firstVisit.endSuperScript }} </sup> {{ firstVisit.endDate | date : "MMM"}} </span> | {{firstVisit.noOfDays}} Day(s)</p>
                   </div>
                   <div>
                     <p>
@@ -101,7 +86,7 @@
           </ion-card>
         </div>
       </ion-item>
-      <!-- <ion-item class="pastItem">
+     <!-- <ion-item class="pastItem">
         <div class="pastContent" item-content>
           <ion-card class="pastCard">
             <ion-card-header class="pastVisitHeading">
