--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -83,6 +83,8 @@
                 </div>
               </div>
             </ion-card-content>
+            <button class="viewDetails" (click)="goToSessionFeedback(visits._id)"> Provide Feedback
+            </button>
           </ion-card>
         </div>
       </ion-item>
