--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -19,7 +19,7 @@
         </ion-input>
       </ion-item>
   
-      <input type="submit" class="page-button" value="Login" [disabled]=f.invalid>
+      <input type="submit" class="page-button" value="Login" [disabled]=f.invalidz>
 
 
 
