--- a/src/pages/mainHeader/mainHeader.html
+++ b/src/pages/mainHeader/mainHeader.html
@@ -1,10 +1,10 @@
 <ion-header class="header">
         <ion-navbar>
-          <ion-title id="mainLogo" class="logoTitle" (click)="goBack($event)">
+          <ion-title id="mainLogo" class="logoTitle" (click)="goBack()">
             <img class="mainLogo" src="assets/imgs/logo1.png">
           </ion-title>
           <div class=profile>
-            <div id="notification-icon" class="notification-icon" (click)="notificationPopover($event)">
+            <div id="notification-icon" class="notification-icon" (click)="notificationPopover()">
               <i class="fa fa-bell-o notifiation" aria-hidden="true"></i>
               <span *ngIf="notificationUnreadCount" class="badge count">{{notificationUnreadCount}}</span>
             </div>
@@ -15,11 +15,11 @@
         </ion-navbar>
  </ion-header> 
  
-<!-- <ion-content>
-        <ion-nav id="nav"  [root]="pageNavigation"></ion-nav>
-</ion-content> -->
-<ion-tabs [selectedIndex]="myIndex">
+<ion-content>
+        <ion-nav id="nav"  [root]="home"></ion-nav>
+</ion-content>
+<!-- <ion-tabs [selectedIndex]="myIndex">
   
   <ion-tab [root]="home"></ion-tab>
-  <ion-tab [root]="notificationsPage"></ion-tab>
-</ion-tabs>
+
+</ion-tabs> -->
