--- a/src/pages/changePasswordFirst/changePassword.html
+++ b/src/pages/changePasswordFirst/changePassword.html
@@ -1,3 +1,5 @@
+<ion-content>
+
 <div class="subHeader">
     <p class="button-clear"  (click)="goBack()">
         <i class="fa fa-chevron-left" aria-hidden="true"></i>Change Password
@@ -14,15 +16,24 @@
 
  
 <form class="formFields"#f="ngForm"  (ngSubmit)="f.valid && changePassword(f)">
-    <label> New Password</label>
-    <input type="password" placeholder="Enter new password" name="newPassword" [(ngModel)]="password"/>
-    <label> Confirm Password</label>
-    <input class="newPassword" type="password" placeholder="Re-enter new password" name="reenterNewPassword" [(ngModel)]="reenterPassword"/>
+    <div class="passwordInput">
+            <label> New Password</label>
+    <input type="password" placeholder="Enter new password" name="newPassword" [(ngModel)]="password" #newPasswordValid = ngModel required/>
+    <div  class="usernameRequirement" class="error" *ngIf ="newPasswordValid.touched && !newPasswordValid.valid">
+        Password is required
+      </div></div>
 
+    <label> Confirm Password</label>
+    <input class="newPassword" type="password" placeholder="Re-enter new password" name="reenterNewPassword" [(ngModel)]="reenterPassword" #reenterPasswordValid = ngModel required/>
+
+          <div  class="usernameRequirement" class="error" *ngIf ="reenterPasswordValid.touched && !reenterPasswordValid.valid">
+        Confirm your password
+      </div>
     <div class="btn-field-org">
-            <button type="submit" class="btn btn-default sub">Submit</button>
+            <button type="submit" class="btn btn-default sub" [disabled]=f.invalid >Submit</button>
             <button type="button" (click)="skip()" class="btn btn-default can">Skip</button>
     </div>
 </form>
 </div>   
 </div>
+</ion-content>
