--- a/src/pages/notification/notification.html
+++ b/src/pages/notification/notification.html
@@ -1,7 +1,8 @@
 
 
 <div class="notificationHeader clearfix">
-    <i class="fa fa-chevron-left backArrow" aria-hidden="true" (click)="goBack()"></i><p class="heading pull-left">Notifications</p>
+    <i class="fa fa-chevron-left backArrow" aria-hidden="true" (click)="goBack()"></i>
+    <p class="heading pull-left">Notifications</p>
     <p class="notificationRead pull-right" (click)="notificationRead()">Mark all as Read</p>
 </div>
 <div class="notificationContainer" *ngIf="notifications" >
