--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,5 +1,6 @@
-<ion-nav id="nav"  [root]="pageNavigation"></ion-nav>
+<!-- <ion-nav id="nav"  [root]="pageNavigation"></ion-nav> -->
 <ion-content class="container">
+  
   <div class="visits">
     <div class="myVisitHeader">
       <h4> My Visit</h4>
