Profile Page Photo Upload

--- a/src/pages/mainHeader/mainHeader.html
+++ b/src/pages/mainHeader/mainHeader.html
@@ -37,7 +37,7 @@
               
               </ion-item>
             </ion-card>
-                     <button class="buttonsProfile"  menuClose (click)="openPage(profilePage)">
+                     <button class="buttonsProfile"  menuClose  (click)="goToProfile()">
                         <i class="fa fa-user" aria-hidden="true"></i>   Profile
                     </button>
                     <button  class="buttonsProfile" menuClose  (click)="goToForgotPassword()">
