--- a/src/pages/my-visit/my-visit.html
+++ b/src/pages/my-visit/my-visit.html
@@ -79,7 +79,7 @@
  
   <p class="flightNumber ">Flight Number : <span>AR8484</span></p>
   <div class="detailsContainer">
-   
+   <div class="flexConatiner">
   <p class="source pull-left"> San Fransisco</p>
   <div class="connectoresFlight">
   <span class="connectors pull-left ">--------</span>
@@ -87,6 +87,9 @@
   <span class="connectors pull-left">--------</span>
   </div>
   <p class="destination pull-right">Hyderabad</p>
+
+  </div>
+
   <div class="clearfix"></div>
   <div class="flightTimings">
       <p class="startingTime ">2 <sup class="subScript">nd</sup> Oct, 8am (Arrival)</p>
