--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -84,43 +84,16 @@
                 </div>
               </div>
             </ion-card-content>
-            <button class="viewDetails" (click)="goToSessionFeedback(visits._id)"> Provide Feedback
+            <button class="viewDetails" (click)="goToSessionFeedback(visits)"> Provide Feedback
             </button>
           </ion-card>
         </div>
       </ion-item>
-     <!-- <ion-item class="pastItem">
-        <div class="pastContent" item-content>
-          <ion-card class="pastCard">
-            <ion-card-header class="pastVisitHeading">
-              Cognizant's Digital Capabilities
-              <button class="pastView" (click)="goToAgenda()"> View 
-                <i class="fa fa-angle-right fa-lg arrowRight" aria-hidden="true"></i>
-              </button>
-            </ion-card-header>
-            <ion-card-content>
-              <div>
-                <div>
-                  <p class="noOfDaysPast">
-                    <i class="fa fa-calendar fa-lg icon-color calendar"></i>
-                    <span class="daysCountPast">  27 Sep - 28 Sep</span> | 2 Day(s)
-                  </p>
-                </div>
-                <div>
-                  <p class="daysCountPast">
-                    <i class="fa fa-map-marker fa-lg icon-color location" aria-hidden="true"></i>
-                    <span class="daysCountPast"> Cognizant- India</span> | Chennai - DLF</p>
-                </div>
-              </div>
-            </ion-card-content>
-          </ion-card>
-        </div>
-      </ion-item> -->
-    </ion-list>
+       </ion-list>
   </div>
 
-    <ion-fab middle right navPush="Chat"
-    [navParams]="toUser" >
+    <ion-fab middle right (click)="openChat()"
+     >
       <button ion-fab>Chat</button>
     </ion-fab>
 
