--- a/src/pages/sessionDetails/sessionDetails.html
+++ b/src/pages/sessionDetails/sessionDetails.html
@@ -1,4 +1,4 @@
-<ion-content>
+<!-- <ion-content>
     <div class="subHeader">
         <p class="button-clear" ng-disabled="clicked" (click)="goBack()">
           <i class="fa fa-chevron-left" aria-hidden="true"></i>Purpose
@@ -21,4 +21,58 @@
     <input type="button" value="Cancel"/>
 </form>
      </div>
-</ion-content>
+</ion-content> -->
+<ion-content padding class="mainContainer">
+  <div class="sessionDetailsPurpose">
+   
+   <p pull-left ><i pull-left class="fa fa-angle-left" aria-hidden="true"(click)="goBack()"></i>Cognizants Digital Capabalities</p>
+  </div>
+  <div class="sessionDeatils">
+    <p>Session Details</p>
+ <div class="visitingLocations">
+   <p>Visiting Location: <span>DLF,Hyderabad</span></p>
+   <p>Meeting Rooom: <span>Yale Conference Room</span></p>
+ 
+ </div>
+  <div class="details">
+    <p class="timings">10:00AM - 11:00AM</p>
+    <p>Digital UX Capabilities</p>
+  </div>
+ <div class="presenterDeatils">
+   <ion-card no-border class="prsenterCard">
+     <ion-card-header class="presenterHeader">
+       Presenters
+     </ion-card-header>
+       <ion-item no-border class="preseneterColumn">
+         <ion-avatar class="avatarPresenter" item-start>
+           <img src="assets/imgs/profilepic_male.png">
+         </ion-avatar>
+         <h2>Marty McFly</h2>
+         <p no-box-shadow>UX Consultant</p>
+       </ion-item>
+       <ion-item no-border class="preseneterColumn">
+         <ion-avatar class="avatarPresenter" item-start>
+           <img src="assets/imgs/profilepic_male.png">
+         </ion-avatar>
+         <h2>Alice Cullen</h2>
+         <p>UX Consultant</p>
+       </ion-item>
+   </ion-card>
+ </div>
+ <div class="presentationDocument">
+   
+    <span>Presentation</span> 
+   <p>
+
+      <i class="fa fa-file-powerpoint-o" aria-hidden="true"></i>
+      Digital UX Presentation
+   </p>
+   <div class="btn-field-org">
+      <button type="button" class="btn btn-default sub" >Provide Presenter Rating</button>
+     
+</div>
+ </div>
+ 
+ 
+  </div>
+ </ion-content>
