--- a/src/pages/profile/profileDetials.html
+++ b/src/pages/profile/profileDetials.html
@@ -1,39 +1,41 @@
 <ion-content>
+        <form class="formFields"  >
     <div class="subHeaderProfile">
         <p class="button-clear" (click)="goBack()">
             <i class="fa fa-chevron-left" aria-hidden="true"></i>Profile
         </p>
-        <p class="editOption">Edit</p>
+      
+        <p class="editOption" id="editOption"  (click)="enableEdit()">Edit</p>
 
 
         <ion-card class="profileMenu">
-
+        
             <ion-item no-margin no-padding>
 
-                <img class="profilePic" src="../assets/imgs/profile_picture.png">
+                <img class="profilePic" src="assets/imgs/profilepic_female.png">
                 <i class="fa fa-camera cameraIcon" aria-hidden="true"></i>
             </ion-item>
         </ion-card>
     </div>
     <div class="clear-fix"></div>
-    <form class="formFields" #f="ngForm" (ngSubmit)="f.valid && changePassword(f)">
-        <div class="fromConatiner">
-            <label> Name</label>
-            <input type="text" placeholder="Enter new password" name="attendeeName" [(ngModel)]="attendeeName" #attendeeNameValid=ngModel
+ 
+        <div class="fromConatiner" *ngIf="attendeeDetails" >
+            <label>Name</label>
+            <input type="text" [disabled]="!editOption" placeholder="{{attendeeDetails.name}}" name="attendeeName" [(ngModel)]="attendeeName" #attendeeNameValid=ngModel
                 required/>
             <!-- <div class="usernameRequirement" class="error" *ngIf="newPasswordValid.touched && !newPasswordValid.valid">
             Password is required
         </div> -->
 
             <label> Email</label>
-            <input type="email" placeholder="Enter new password" name="attendeeEmail" [(ngModel)]="email" #attendeeEmailValid=ngModel
+            <input type="email" [disabled]="!editOption" placeholder="{{attendeeDetails.email}}" name="attendeeEmail" [(ngModel)]="email" #attendeeEmailValid=ngModel
                 required/>
             <!-- <div class="usernameRequirement" class="error" *ngIf="newPasswordValid.touched && !newPasswordValid.valid">
             Password is required
         </div> -->
 
             <label> Contact Number</label>
-            <input type="tel" placeholder="Enter new password" name="attendeeTel" [(ngModel)]="attendeeTel" #attendeeTelValid=ngModel
+            <input type="tel" [disabled]="!editOption" placeholder="{{attendeeDetails.contactNumber}}" name="attendeeTel" [(ngModel)]="attendeeTel" #attendeeTelValid=ngModel
                 required/>
             <!-- <div class="usernameRequirement" class="error" *ngIf="newPasswordValid.touched && !newPasswordValid.valid">
             Password is required
@@ -41,19 +43,19 @@
             <p>Change Security Question</p>
             <label>Security Question</label>
 
-            <ion-select name="securityQuestion" [disabled] [(ngModel)]="securityQuestion" 
-                class="securityDropDown">
+            <ion-select name="securityQuestion" [disabled]="!editOption" [(ngModel)]="securityQuestion" 
+                class="securityDropDown" placeholder="{{attendeeDetails.quesAns.Question}}">
                 <ion-option class="dropDownOptions " selected hidden disabled>Select a question</ion-option>
-                <ion-option selected hidden disabled>What is the name of your first pet?</ion-option>
-                <ion-option selected hidden disabled>What is favourite car to ride? </ion-option>
+                <ion-option [disabled]="!editOption">What is the name of your first pet?</ion-option>
+                <ion-option [disabled]="!editOption">What is favourite car to ride? </ion-option>
             </ion-select>
 
             <label> Your Answer</label>
-            <input type="password" placeholder="Enter the security answer" name="reenterNewPassword" [(ngModel)]="securityAnswer" />
-            <div class="btn-field-org">
-                <button type="submit" class="btn btn-default sub" [disabled]=f.invalid>Submit</button>
+            <input type="password" [disabled]="!editOption" placeholder="Enter the security answer" name="reenterNewPassword" [(ngModel)]="securityAnswer" />
+            <!-- <div class="btn-field-org" [hidden] = "!editOption">
+                <button type="submit" class="btn btn-default sub" [disabled]=f.invalid>Save</button>
                 <button type="button" (click)="skip()" class="btn btn-default can">Cancel</button>
-            </div>
+            </div> -->
 
         </div>
     </form>
