--- a/src/pages/changePasswordFirst/changePasswordFirst.html
+++ b/src/pages/changePasswordFirst/changePasswordFirst.html
@@ -18,7 +18,12 @@
 <form class="formFields"#f="ngForm"  (ngSubmit)="f.valid && changePassword(f)">
     <div class="passwordInput">
             <label> New Password</label>
-    <input type="password" placeholder="Enter new password" name="newPassword" [(ngModel)]="password" #newPasswordValid = ngModel required/>
+    <input type="password" 
+    placeholder="Enter new password" 
+    name="newPassword" 
+    [(ngModel)]="password" 
+    #newPasswordValid = ngModel
+     required />
     <div  class="usernameRequirement" class="error" *ngIf ="newPasswordValid.touched && !newPasswordValid.valid">
         Password is required
       </div></div>
@@ -29,6 +34,12 @@
           <div  class="usernameRequirement" class="error" *ngIf ="reenterPasswordValid.touched && !reenterPasswordValid.valid">
         Confirm your password 
       </div>
+      <ng2-password-strength-bar
+      [passwordToCheck]="password"
+      [barLabel]="barLabel"
+      [barColors]="myColors"
+      class="passwordValidator">
+    </ng2-password-strength-bar>
     <div class="btn-field-org">
             <button type="submit" class="btn btn-default sub" [disabled]=f.invalid >Submit</button>
             <button type="button" (click)="skip()" class="btn btn-default can">Skip</button>
