--- a/src/pages/changePassword/changePassword.html
+++ b/src/pages/changePassword/changePassword.html
@@ -9,7 +9,7 @@
 
     <p class="passwordLogo"><i class="fa fa-lock icon passwordChange"></i></p>
    <div class="passwordContainer"> 
-       <p class="passwordgudlines"><span>Note:</span>Minimum of 6 characters with one lowercase,Uppercase,one digit and Must have at least a one special characters- “!,@,#,$,%,&,*,(,),+”
+       <p class="passwordgudlines"><span>Note:</span>Minimum of 6 characters with one lowercase,Uppercase,one digit and Must have at least a one special characters- “!,#,$,%,&,*,(,),+”
      </p> 
    </div>
    <div class="formContainer">
@@ -19,15 +19,15 @@
         <div class="passwordInput">
                 <label> Old Password</label>
         <input type="password" placeholder="Enter new password" name="oldPassword" [(ngModel)]="oldPassword" #oldPasswordValid = ngModel required/>
-        <div  class="usernameRequirement" class="error" *ngIf ="newPasswordValid.touched && !newPasswordValid.valid">
-            Password is required
+        <div  class="usernameRequirement" class="error" *ngIf ="oldPasswordValid.touched && !oldPasswordValid.valid">
+            Old Password is required
           </div>
         </div>
     <div class="passwordInput">
             <label> New Password</label>
-    <input type="password" placeholder="Enter new password" name="newPassword" [(ngModel)]="password" #newPasswordValid = ngModel required/>
+    <input type="password" placeholder="Enter new password" name="newPassword" [(ngModel)]="password" #newPasswordValid = ngModel maxlength="15" required/>
     <div  class="usernameRequirement" class="error" *ngIf ="newPasswordValid.touched && !newPasswordValid.valid">
-        Password is required
+        Password is required and follow the requirement.
       </div>
     </div>
 
@@ -37,6 +37,12 @@
           <div  class="usernameRequirement" class="error" *ngIf ="reenterPasswordValid.touched && !reenterPasswordValid.valid">
         Confirm your password
       </div>
+      <ng2-password-strength-bar
+      [passwordToCheck]="password"
+      [barLabel]="barLabel"
+      [barColors]="myColors"
+      class="passwordValidator">
+    </ng2-password-strength-bar>
     <div class="btn-field-org">
             <button type="submit" class="btn btn-default sub" [disabled]=f.invalid >Submit</button>
             <button type="button" (click)="skip()" class="btn btn-default can">Cancel</button>
