--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -15,7 +15,7 @@
       </ion-item>
   
       <ion-item class="loginInput">
-        <ion-input type="password" placeholder="Password " name="password" [(ngModel)]="password" #pwd="ngModel" required>
+        <ion-input type="password" placeholder="Password " minlength="5" maxlength="10"  name="password" [(ngModel)]="password" #pwd="ngModel" required  >
         </ion-input>
       </ion-item>
   
