--- a/src/pages/my-visit/my-visit.html
+++ b/src/pages/my-visit/my-visit.html
@@ -2,7 +2,7 @@
   <div ng-disabled="clicked">
     <div class="subHeader">
       <p class="button-clear" ng-disabled="clicked" (click)="goBack()">
-        <i class="fa fa-chevron-left" aria-hidden="true"></i>{{visitDetails.purpose}}
+        <i class="fa fa-angle-left" aria-hidden="true"></i>{{visitDetails.purpose}}
       </p>
       <div class="locationDetails">
         <p>Cognizant {{visitDetails.visit_locations[0].country}}, {{visitDetails.visit_locations[0].city}} - {{visitDetails.visit_locations[0].visitingLocation}}</p>
