--- a/src/index.html
+++ b/src/index.html
@@ -49,5 +49,6 @@
    
      <!-- The main bundle js is generated during the build process -->
      <script src="build/main.js"></script>
+     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCCXqAl9RvHnJQI4c2vO1RsFyfyAxIPRkg&libraries=places"></script>
 </body>
 </html>
