--- a/src/pages/chat/chat.html
+++ b/src/pages/chat/chat.html
@@ -1,14 +1,53 @@
 
  
-<ion-content padding>
+<!-- <ion-content padding> -->
   <!-- <ion-item>
     <ion-label stacked>Set Nickname</ion-label>
     <ion-input type="text" [(ngModel)]="nickname" placeholder="Nickname"></ion-input>
   </ion-item> -->
-<ion-item no-border>
+<!-- <ion-item no-border>
   <ion-list  *ngFor="let attendees of names; let i=index"  (click)="joinChat(i)">
 <p >{{ attendees }}</p>
   </ion-list>
-</ion-item>
+</ion-item> -->
   <!-- <button ion-button full (click)="joinChat()" [disabled]="nickname === ''">Join Chat as {{ nickname }}</button> -->
-</ion-content>
+  <!-- <ion-header>
+    <ion-navbar color="primary">
+      <ion-title>
+        Ionic API.AI 
+      </ion-title>
+    </ion-navbar>
+  </ion-header> -->
+  
+  <ion-content padding>
+   
+    <ion-list no-lines>
+      <ion-item text-wrap *ngFor="let m of messages" [ngClass]="{ 'from': m.from === 'bot','to':   m.from === 'user' }">
+        <ion-avatar item-start>
+          <img [src]="m.from === 'bot' ? 'https://cdn3.iconfinder.com/data/icons/avatars-9/145/Avatar_Robot-512.png' : 'https://image.flaticon.com/icons/png/128/149/149071.png'">
+        </ion-avatar>
+        <h2>
+          <strong>{{m.from}}</strong>
+        </h2>
+        <div class="message">{{m.msg}}</div>
+        <p>
+          <img *ngIf="m.iconURL != ''" [src]="m.iconURL" (click)="onClickWeatherIcon()"  />
+        </p>
+        <ion-note item-end>{{currentDate | date:"fullDate" }}</ion-note>
+      </ion-item>
+    </ion-list>
+    <div #map id="map"></div>
+  </ion-content>
+  
+  <ion-footer>
+    <ion-toolbar color="primary">
+      <ion-input type="text" [(ngModel)]="chatBox" placeholder="Message..." (keypress)="keyPressHandler($event.keyCode, chatBox)"></ion-input>
+      <ion-buttons end>
+        <button ion-button (click)="send(chatBox)">
+          <ion-icon name="send"></ion-icon>
+        </button>
+      </ion-buttons>
+
+    </ion-toolbar>
+  </ion-footer>
+<!-- </ion-content> -->
