--- a/src/pages/notification/notification.html
+++ b/src/pages/notification/notification.html
@@ -3,11 +3,11 @@
 <div class="notificationHeader clearfix">
     <i class="fa fa-chevron-left backArrow" aria-hidden="true" (click)="goBack()"></i>
     <p class="heading pull-left">Notifications</p>
-    <p class="notificationRead pull-right" (click)="notificationRead()">Mark all as Read</p>
+    <p class="notificationRead pull-right" >Mark all as Read</p>
 </div>
 <div class="notificationContainer" *ngIf="notifications" >
     <ul id="notification-list">
-        <li class="{{notification.read_flag==1?'read':'unread'}}" *ngFor="let notification of notifications; let i =index;" (click)="gotoAgenda(notification.visitId)">
+        <li class="{{notification.read_flag==1?'read':'unread'}}" *ngFor="let notification of notifications; let i =index;" (click)="gotoAgenda(notification)">
             <p class="notificationName pull-left">{{notification.title}}</p>
             <p class="notificationTime pull-right" *ngIf=" notification.periodAgo">{{notification.periodAgo}}</p>
             <p class="notificationContent">{{notification.description}}</p>
